--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    font-family: 'Open Sans', sans-serif;
+    @apply bg-gray-100
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    @apply px-8 md:px-32 py-4 md:py-10
+}
+
+.btn-primary {
+    @apply bg-blue-400 px-5 py-2 rounded-lg text-white text-sm md:scale-90 hover:bg-blue-500 transition-colors duration-500 ease-in-out
+}
+
+.img {
+    @apply rounded-lg border object-cover object-center h-48 w-full transform hover:scale-105 transition-transform duration-500 ease-in-out
+}
+
+.form-control {
+    @apply py-2 px-4 border rounded-lg w-full text-black font-medium mt-2 focus:outline-none focus:border-blue-300 text-gray-600 p-3
 }
